# kaymer-hedgedoc-mcp

./: README.md  pyproject.toml
src/hedgedoc_mcp_server/: __init__.py
