[project]
name = "hedgedoc-mcp-server"
version = "0.1.0"
description = "MCP server for HedgeDoc - create collaborative markdown notes with Mermaid diagrams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Julian Agama", email = "julianagamatanta@gmail.com" },
]
keywords = ["hedgedoc", "mcp", "opencode", "mermaid", "diagrams"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Jyzus/kaymer-hedgedoc-mcp"
Repository = "https://github.com/Jyzus/kaymer-hedgedoc-mcp"

[project.scripts]
hedgedoc-mcp-server = "hedgedoc_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hedgedoc_mcp_server"]
